# pathbase

./: .gitignore  Cargo.toml  Makefile.toml  README.md
src/: main.rs
src/views/: layout.rs
